# PIXIE

./: .dockerignore  .env.example  .gitignore  DOCKERHUB_README.md  Dockerfile  PIXEL_BACKEND_ARCHITECTURE.md  PIXEL_FULL_PHASE_BREAKDOWN.md  PIXIE_BACKEND_ARCHITECTURE.md  PIXIE_FULL_PHASE_BREAKDOWN.md  README.md  SPACES_README.md  activity_log.md  fix_bf16.py  fix_widgets.py  heartbeat.txt  inference.py  openenv.yaml  push_contributions.ps1  pyproject.toml  requirements.txt  validation_output.txt
app/: environment.py  graders.py  main.py  models.py  tasks.py
backend/: __init__.py  agents.py  combined_env.py  environment.py  grader.py  main.py  mars_rover_env.py  moon_rover_env.py  nasa_client.py  rewards.py  satellite_env.py  satellite_service.py  tasks.py  test_pixel.py  test_world_model.py  world.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  MarsPlanet.jsx  RoverScene.jsx  index.css
frontend/src/components/ui/: dithering-shader.tsx  landing-page.tsx  space-box.tsx  (+1 more)
frontend/src/data/: collisionHistory.ts  launch_anomaly_starship_ift3.json  launch_failure_crs7.json  launch_success_artemis1.json  launch_success_demo2.json
frontend/src/pages/: CollisionDetailPage.tsx  LaunchDetailsPage.tsx  LiveLaunchDashboard.tsx  MissionDetailsDashboard.tsx  MissionSelectPage.tsx  OperationsHubPage.tsx  PastLaunchesPage.tsx  RoverDashboard.tsx  SatelliteDashboard.tsx  TrainingResultsPage.tsx
screenshots/: README.md
scripts/: baseline.py  validate_submission.py
server/: app.py
training/: train.py  train_grpo.ipynb
